--- a/ShoppingGuide/Classes/DanTang/View/IWCommitCell.xib
+++ b/ShoppingGuide/Classes/DanTang/View/IWCommitCell.xib
@@ -12,49 +12,64 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commitCell" rowHeight="57" id="KGk-i7-Jjw" customClass="IWCommitCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commitCell" rowHeight="59" id="KGk-i7-Jjw" customClass="IWCommitCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k4n-u5-iRE">
                         <rect key="frame" x="5" y="5" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="Xj1-T2-Uma"/>
+                            <constraint firstAttribute="width" constant="30" id="IVa-Vy-RFA"/>
+                            <constraint firstAttribute="height" constant="30" id="MXE-nG-nVV"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="userName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lHs-BY-N3r">
-                        <rect key="frame" x="43" y="8" width="70.5" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="FFe-BP-ZpW">
+                        <rect key="frame" x="43" y="5" width="71" height="18"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="userName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lHs-BY-N3r">
+                                <rect key="frame" x="0.0" y="0.0" width="71" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3h-7Z-Qp5">
+                        <rect key="frame" x="43" y="34" width="269" height="13.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3h-7Z-Qp5">
-                        <rect key="frame" x="43" y="34" width="46.5" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <nil key="textColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017-03-22 18:23:50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UIz-if-T2a">
+                        <rect key="frame" x="122" y="8" width="104" height="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="u3h-7Z-Qp5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="35" id="45F-tu-gPh"/>
-                    <constraint firstItem="k4n-u5-iRE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="E5O-F6-SaZ"/>
-                    <constraint firstItem="lHs-BY-N3r" firstAttribute="leading" secondItem="k4n-u5-iRE" secondAttribute="trailing" constant="8" id="MQn-rg-5uY"/>
-                    <constraint firstItem="u3h-7Z-Qp5" firstAttribute="top" secondItem="lHs-BY-N3r" secondAttribute="bottom" constant="8" id="ORK-et-R0X"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="k4n-u5-iRE" secondAttribute="bottom" constant="11.5" id="mKT-9w-Whc"/>
-                    <constraint firstItem="u3h-7Z-Qp5" firstAttribute="top" secondItem="lHs-BY-N3r" secondAttribute="bottom" constant="8" id="nd6-cE-lVF"/>
-                    <constraint firstItem="lHs-BY-N3r" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="zJx-vz-2R1"/>
-                    <constraint firstItem="k4n-u5-iRE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="zrd-XT-nsb"/>
+                    <constraint firstItem="u3h-7Z-Qp5" firstAttribute="top" secondItem="FFe-BP-ZpW" secondAttribute="bottom" constant="11" id="48E-c0-eJx"/>
+                    <constraint firstItem="k4n-u5-iRE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="CPj-pR-917"/>
+                    <constraint firstItem="u3h-7Z-Qp5" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="EbW-0y-3rx"/>
+                    <constraint firstItem="k4n-u5-iRE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="G3i-3g-ohP"/>
+                    <constraint firstItem="UIz-if-T2a" firstAttribute="centerY" secondItem="FFe-BP-ZpW" secondAttribute="centerY" id="H5v-Pf-FUn"/>
+                    <constraint firstItem="UIz-if-T2a" firstAttribute="leading" secondItem="FFe-BP-ZpW" secondAttribute="trailing" constant="8" symbolic="YES" id="JxT-US-OJ1"/>
+                    <constraint firstItem="FFe-BP-ZpW" firstAttribute="leading" secondItem="k4n-u5-iRE" secondAttribute="trailing" constant="8" id="QMp-fe-Wa3"/>
+                    <constraint firstItem="FFe-BP-ZpW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="i5c-4L-mha"/>
+                    <constraint firstItem="u3h-7Z-Qp5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="35" id="rzf-yr-eAm"/>
+                    <constraint firstAttribute="trailing" secondItem="FFe-BP-ZpW" secondAttribute="trailing" constant="206" id="wzL-F0-XBe"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="contentlab" destination="u3h-7Z-Qp5" id="gzY-Gb-Wt1"/>
+                <outlet property="createTime" destination="UIz-if-T2a" id="FCL-Sz-Y81"/>
                 <outlet property="userAvatarimage" destination="k4n-u5-iRE" id="c6R-bL-HQ8"/>
                 <outlet property="userNamelab" destination="lHs-BY-N3r" id="Hls-9g-i4C"/>
             </connections>
-            <point key="canvasLocation" x="33" y="106.5"/>
+            <point key="canvasLocation" x="33" y="102.5"/>
         </tableViewCell>
     </objects>
 </document>
