--- a/ShoppingGuide/Classes/Me/View/LYLikeCell.xib
+++ b/ShoppingGuide/Classes/Me/View/LYLikeCell.xib
@@ -1,23 +1,27 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="70" id="KGk-i7-Jjw" customClass="LYLikeCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="41" id="KGk-i7-Jjw" customClass="LYLikeCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="41"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="40.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XQf-2B-Sr6">
-                        <rect key="frame" x="5" y="5" width="100" height="59.5"/>
+                        <rect key="frame" x="5" y="5" width="30" height="30.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="FEc-4a-fjD"/>
+                            <constraint firstAttribute="width" constant="30" id="FEc-4a-fjD"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -27,17 +31,17 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mMd-om-s3c">
-                        <rect key="frame" x="115" y="25.5" width="195" height="18"/>
+                        <rect key="frame" x="64" y="10" width="246" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="XQf-2B-Sr6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="8Px-FD-3yJ"/>
                     <constraint firstAttribute="trailing" secondItem="mMd-om-s3c" secondAttribute="trailing" constant="10" id="NHX-bU-3sE"/>
-                    <constraint firstItem="mMd-om-s3c" firstAttribute="leading" secondItem="XQf-2B-Sr6" secondAttribute="trailing" constant="10" id="ffK-uX-e1g"/>
-                    <constraint firstItem="mMd-om-s3c" firstAttribute="centerY" secondItem="XQf-2B-Sr6" secondAttribute="centerY" id="ghw-Tl-e5G"/>
+                    <constraint firstItem="mMd-om-s3c" firstAttribute="leading" secondItem="XQf-2B-Sr6" secondAttribute="trailing" constant="29" id="ffK-uX-e1g"/>
+                    <constraint firstItem="mMd-om-s3c" firstAttribute="centerY" secondItem="XQf-2B-Sr6" secondAttribute="centerY" constant="-1.25" id="ghw-Tl-e5G"/>
                     <constraint firstAttribute="bottom" secondItem="XQf-2B-Sr6" secondAttribute="bottom" constant="5" id="gkA-WP-n5Z"/>
                     <constraint firstItem="XQf-2B-Sr6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="toK-vK-S8X"/>
                 </constraints>
@@ -46,7 +50,7 @@
                 <outlet property="imageV" destination="XQf-2B-Sr6" id="JRe-XL-NpA"/>
                 <outlet property="title" destination="mMd-om-s3c" id="knQ-ZM-Z8a"/>
             </connections>
-            <point key="canvasLocation" x="181" y="226"/>
+            <point key="canvasLocation" x="181" y="215.5"/>
         </tableViewCell>
     </objects>
 </document>
