--- a/ShoppingGuide/Classes/Me/View/LYLikeCell.xib
+++ b/ShoppingGuide/Classes/Me/View/LYLikeCell.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,13 +16,14 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="41"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="40.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="41"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XQf-2B-Sr6">
-                        <rect key="frame" x="5" y="5" width="30" height="30.5"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="latiao" translatesAutoresizingMaskIntoConstraints="NO" id="XQf-2B-Sr6">
+                        <rect key="frame" x="5" y="5" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="FEc-4a-fjD"/>
+                            <constraint firstAttribute="height" constant="30" id="1o9-IN-P4O"/>
+                            <constraint firstAttribute="width" constant="30" id="OaS-CP-BEh"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -31,19 +33,30 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mMd-om-s3c">
-                        <rect key="frame" x="64" y="10" width="246" height="18"/>
+                        <rect key="frame" x="43" y="11" width="254" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CellDisclosureIndicator_8x12_" translatesAutoresizingMaskIntoConstraints="NO" id="kUD-HY-dTq">
+                        <rect key="frame" x="302" y="15" width="8" height="10"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="8" id="6A5-bu-zg2"/>
+                            <constraint firstAttribute="height" constant="10" id="MWR-dz-Xye"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="XQf-2B-Sr6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="8Px-FD-3yJ"/>
-                    <constraint firstAttribute="trailing" secondItem="mMd-om-s3c" secondAttribute="trailing" constant="10" id="NHX-bU-3sE"/>
-                    <constraint firstItem="mMd-om-s3c" firstAttribute="leading" secondItem="XQf-2B-Sr6" secondAttribute="trailing" constant="29" id="ffK-uX-e1g"/>
-                    <constraint firstItem="mMd-om-s3c" firstAttribute="centerY" secondItem="XQf-2B-Sr6" secondAttribute="centerY" constant="-1.25" id="ghw-Tl-e5G"/>
-                    <constraint firstAttribute="bottom" secondItem="XQf-2B-Sr6" secondAttribute="bottom" constant="5" id="gkA-WP-n5Z"/>
-                    <constraint firstItem="XQf-2B-Sr6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="toK-vK-S8X"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="kUD-HY-dTq" secondAttribute="trailing" constant="2" id="BqK-Vu-qUO"/>
+                    <constraint firstItem="mMd-om-s3c" firstAttribute="leading" secondItem="XQf-2B-Sr6" secondAttribute="trailing" constant="8" id="Fwe-tV-75N"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="mMd-om-s3c" secondAttribute="bottom" constant="4" id="VyZ-kk-eyu"/>
+                    <constraint firstItem="XQf-2B-Sr6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="ZFj-hb-CaK"/>
+                    <constraint firstItem="XQf-2B-Sr6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="b4f-fS-i9F"/>
+                    <constraint firstItem="kUD-HY-dTq" firstAttribute="leading" secondItem="mMd-om-s3c" secondAttribute="trailing" constant="5" id="bL3-Cy-78H"/>
+                    <constraint firstAttribute="bottom" secondItem="XQf-2B-Sr6" secondAttribute="bottom" constant="5" id="khp-pO-DX4"/>
+                    <constraint firstItem="mMd-om-s3c" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="mdl-bV-hel"/>
+                    <constraint firstItem="kUD-HY-dTq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="t9U-EE-326"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="kUD-HY-dTq" secondAttribute="bottom" constant="8" id="ukW-Bs-mVn"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -53,4 +66,8 @@
             <point key="canvasLocation" x="181" y="215.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="CellDisclosureIndicator_8x12_" width="8" height="12"/>
+        <image name="latiao" width="1158" height="1159"/>
+    </resources>
 </document>
