--- a/ShoppingGuide/Classes/Me/View/LYLikeCell.xib
+++ b/ShoppingGuide/Classes/Me/View/LYLikeCell.xib
@@ -16,10 +16,10 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="41"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="41"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="40.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="latiao" translatesAutoresizingMaskIntoConstraints="NO" id="XQf-2B-Sr6">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mylatiao" translatesAutoresizingMaskIntoConstraints="NO" id="XQf-2B-Sr6">
                         <rect key="frame" x="5" y="5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="1o9-IN-P4O"/>
@@ -68,6 +68,6 @@
     </objects>
     <resources>
         <image name="CellDisclosureIndicator_8x12_" width="8" height="12"/>
-        <image name="latiao" width="1158" height="1159"/>
+        <image name="mylatiao" width="200" height="200"/>
     </resources>
 </document>
