--- a/ShoppingGuide/Classes/Me/Controller/LYLoginViewController.xib
+++ b/ShoppingGuide/Classes/Me/Controller/LYLoginViewController.xib
@@ -12,9 +12,12 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LYLoginViewController">
             <connections>
                 <outlet property="loginBtn" destination="0JT-OH-DcE" id="0W9-WR-aCH"/>
+                <outlet property="passwordOrSms" destination="bLv-6P-qNg" id="FCP-nf-qlp"/>
                 <outlet property="phoneNum" destination="Kdb-2E-2gN" id="bae-LZ-tn4"/>
                 <outlet property="pwd" destination="Z2g-yy-0rU" id="ifN-L4-e1j"/>
+                <outlet property="sendSms" destination="w3P-tP-xVO" id="5gH-7Q-Hmm"/>
                 <outlet property="sendSmsBtn" destination="w3P-tP-xVO" id="0Dq-Ot-s5j"/>
+                <outlet property="smstxt" destination="ure-zU-XWp" id="9GM-P5-rFg"/>
                 <outlet property="view" destination="iN0-l3-epB" id="TbU-Ls-Gur"/>
             </connections>
         </placeholder>
@@ -116,15 +119,18 @@
                         <action selector="loginIn:" destination="-1" eventType="touchUpInside" id="e19-kx-MeX"/>
                     </connections>
                 </button>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLv-6P-qNg">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLv-6P-qNg">
                     <rect key="frame" x="529" y="267" width="56" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="Olh-AI-Lhe"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <state key="normal" title="忘记密码">
+                    <state key="normal" title="验证码登入">
                         <color key="titleColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="passwordOrSmsbtn:" destination="-1" eventType="touchUpInside" id="rRJ-fa-79S"/>
+                    </connections>
                 </button>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EVe-LT-W5c">
                     <rect key="frame" x="0.0" y="312" width="600" height="30"/>
