--- a/ShoppingGuide/Classes/Me/Controller/IWAboutMeViewController.xib
+++ b/ShoppingGuide/Classes/Me/Controller/IWAboutMeViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,11 +18,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="V1.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ot8-Oa-aVz">
-                    <rect key="frame" x="162.5" y="323" width="50" height="21"/>
+                    <rect key="frame" x="182" y="357.66666666666669" width="50" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="O8r-jS-ccu"/>
                     </constraints>
@@ -31,7 +31,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="latiaoAboutMe" translatesAutoresizingMaskIntoConstraints="NO" id="WK3-gC-YmP">
-                    <rect key="frame" x="123.5" y="112" width="128" height="128"/>
+                    <rect key="frame" x="143" y="112" width="128" height="128"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="WK3-gC-YmP" secondAttribute="height" multiplier="1:1" id="4D4-4U-1gg"/>
                         <constraint firstAttribute="height" constant="128" id="54w-jw-mAo"/>
@@ -39,20 +39,47 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="版权信息  ©️ 2017 latiao" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4Q-E9-KZi">
-                    <rect key="frame" x="93" y="632" width="205" height="15"/>
+                    <rect key="frame" x="93" y="701" width="244" height="15"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QQ群：143051308" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4UM-D3-tUu">
+                    <rect key="frame" x="16" y="469.66666666666669" width="298" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="微信公众号：baihklink" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YQs-th-Sdy">
+                    <rect key="frame" x="16" y="494.66666666666669" width="298" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="邮箱：bhk545145@163.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="99b-3n-1OF">
+                    <rect key="frame" x="16" y="519.66666666666663" width="298" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="99b-3n-1OF" secondAttribute="trailing" constant="100" id="0QR-eO-KL3"/>
+                <constraint firstAttribute="trailing" secondItem="4UM-D3-tUu" secondAttribute="trailing" constant="100" id="1cP-I0-giQ"/>
+                <constraint firstItem="4UM-D3-tUu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="4xY-Xx-zid"/>
                 <constraint firstItem="Ot8-Oa-aVz" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="7E2-ls-Hew"/>
                 <constraint firstItem="WK3-gC-YmP" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="112" id="8Ry-LS-SOI"/>
+                <constraint firstItem="99b-3n-1OF" firstAttribute="top" secondItem="YQs-th-Sdy" secondAttribute="bottom" constant="8" symbolic="YES" id="HwG-gz-ywR"/>
+                <constraint firstItem="YQs-th-Sdy" firstAttribute="top" secondItem="4UM-D3-tUu" secondAttribute="bottom" constant="8" symbolic="YES" id="JHw-5R-dCT"/>
+                <constraint firstAttribute="trailing" secondItem="YQs-th-Sdy" secondAttribute="trailing" constant="100" id="K5P-Cp-LdP"/>
                 <constraint firstAttribute="trailing" secondItem="K4Q-E9-KZi" secondAttribute="trailing" constant="77" id="Npx-2o-XOC"/>
                 <constraint firstItem="K4Q-E9-KZi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="93" id="OSG-AE-tEe"/>
                 <constraint firstAttribute="bottom" secondItem="K4Q-E9-KZi" secondAttribute="bottom" constant="20" id="Q0y-VJ-Eqr"/>
+                <constraint firstItem="YQs-th-Sdy" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="Ubu-fc-GBs"/>
+                <constraint firstItem="4UM-D3-tUu" firstAttribute="top" secondItem="Ot8-Oa-aVz" secondAttribute="bottom" constant="91" id="VGb-xL-PSl"/>
                 <constraint firstItem="WK3-gC-YmP" firstAttribute="centerX" secondItem="Ot8-Oa-aVz" secondAttribute="centerX" id="gCV-hw-k9d"/>
+                <constraint firstItem="99b-3n-1OF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="yjo-iE-4P0"/>
                 <constraint firstItem="Ot8-Oa-aVz" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="zSb-Kk-DyK"/>
             </constraints>
             <point key="canvasLocation" x="32.5" y="84.5"/>
